[package]
name = "hardercore-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
derive_more = "0.99.17"
reqwest = { version = "0.11.16", features = ["json"] }
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.96"
