[package]
name = "hardercore-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
base64 = "0.21.0"
color-eyre = "0.6.2"
derive_more = "0.99.17"
reqwest = { version = "0.11.16", features = ["json"] }
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.96"
syn = "2.0.15"
thiserror = "1.0.40"